# P3Bingo

./: CMakeLists.txt  README.md  bingodef.h  client.cpp  client.h  connectionipinput.cpp  connectionipinput.h  connectionipinput.ui  editlist.cpp  editlist.h  editlist.ui  game.cpp  game.h  hostportinput.cpp  hostportinput.h  hostportinput.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmessages.cpp  networkmessages.h  server.cpp  server.h  teamdata.cpp  teamdata.h  tile.cpp  tile.h  tiledelegate.cpp  tiledelegate.h
